[gstreamer]  assertion in g_object_unref from _WebKitWebAudioSourcePrivate destructor https://bugs.webkit.org/show_bug.cgi?id=107374

Reviewed by Philippe Normand.

WebKitWebAudioSrc object gets unrefed one time too many in
_WebKitWebAudioSourcePrivate destructor, causing an assertion
in g_object_unref. This patch passes NULL instead of
g_object_unref to gst_task_new() so that the WebKitWebAudioSrc
object does not get unrefed when the GstTask is destroyed.

No new tests, already covered by webaudio tests.

* platform/audio/gstreamer/WebKitWebAudioSourceGStreamer.cpp:
(webkit_web_audio_src_init):


Canonical link: https://commits.webkit.org/125626@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@140272 268f45cc-cd09-0410-ab3c-d52691b4dbfc